force-app/main/default/objects/Sansan_CI__CampaignMemberRegistrationResult__c/Sansan_CI__CampaignMemberRegistrationResult__c.object-meta.xml
<CustomObject>
    <label>キャンペーンメンバー自動登録結果</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>キャンペーンメンバー自動登録結果</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>