force-app/main/default/objects/Sansan_CI__CampaignMemberRegistrationResult__c/fields/Sansan_CI__CampaignMemberRegistrationErrorNum__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CampaignMemberRegistrationErrorNum__c</fullName>
    <label>キャンペーンメンバー作成エラー件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>